--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "-": "0.0.1",
     "@angular/animations": "~12.0.1",
     "@angular/cdk": "^12.1.3",
     "@angular/common": "~12.0.1",
@@ -21,7 +22,9 @@
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
     "@ngrx/store": "^12.3.0",
+    "angular-cli-ghpages": "^1.0.0-rc.2",
     "rxjs": "~6.6.0",
+    "save-dev": "0.0.1-security",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
